feat: add token management