@@ -1,13 +1,12 @@
 package com.bookverse.controller;
 
-import com.bookverse.dto.request.ai.AiChatRequest;
-import com.bookverse.dto.request.ai.AiRecommendRequest;
-import com.bookverse.dto.response.ai.AiChatResponse;
-import com.bookverse.dto.response.ai.AiRecommendResponse;
+import com.bookverse.common.dto.PageResponseDTO;
+import com.bookverse.dto.response.ai.AiUsageLogResponseDTO;
 import com.bookverse.entity.User;
+import com.bookverse.enums.AiRequestType;
 import com.bookverse.enums.UserRole;
 import com.bookverse.security.JwtService;
-import com.bookverse.service.ai.AiChatService;
+import com.bookverse.service.ai.AiUsageService;
 import com.bookverse.config.SecurityConfig;
 import com.bookverse.security.CustomUserDetailsService;
 import com.bookverse.security.JwtAuthenticationFilter;
@@ -27,6 +26,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
+import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 
@@ -34,23 +34,20 @@ import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.doAnswer;
 import static org.mockito.Mockito.when;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.user;
-import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.get;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(AiChatController.class)
+@WebMvcTest(AdminAiUsageController.class)
 @Import(SecurityConfig.class)
 @ActiveProfiles("test")
-class AiChatControllerTest {
+class AdminAiUsageControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
-
     @MockBean
-    private AiChatService aiChatService;
+    private AiUsageService aiUsageService;
 
     @MockBean
     private JwtService jwtService;
@@ -74,33 +71,47 @@ class AiChatControllerTest {
     }
 
     @Test
-    void chat_ShouldReturnResponse_WhenCustomerAuthenticated() throws Exception {
-        AiChatRequest request = new AiChatRequest("What is clean code?", List.of(1L), 5);
-        AiChatResponse response = new AiChatResponse("Clean code is...", Collections.emptyList());
-        when(aiChatService.chat(any(), any())).thenReturn(response);
+    void getLogs_ShouldReturnLogs_WhenAdminAuthenticated() throws Exception {
+        AiUsageLogResponseDTO log = new AiUsageLogResponseDTO(1L, 2L, "customer@example.com", "Customer Name", AiRequestType.BOOK_RECOMMEND, "query", "response", 10, 20, 30, 100L, Instant.now());
+        PageResponseDTO<AiUsageLogResponseDTO> pageResponse = new PageResponseDTO<>(List.of(log), 0, 10, 1L, 1);
+        when(aiUsageService.getLogs(any(), any(), any())).thenReturn(pageResponse);
 
-        mockMvc.perform(post("/api/v1/ai/chat")
-                        .with(user(securityUser(1L, UserRole.CUSTOMER)))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+        mockMvc.perform(get("/api/v1/admin/ai/usage/logs")
+                        .with(user(securityUser(1L, UserRole.ADMIN)))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.code").value(200))
-                .andExpect(jsonPath("$.data.answer").value("Clean code is..."));
+                .andExpect(jsonPath("$.data.items[0].query").value("query"));
     }
 
     @Test
-    void recommend_ShouldReturnResponse_WhenCustomerAuthenticated() throws Exception {
-        AiRecommendRequest request = new AiRecommendRequest("Recommend Java books", 5);
-        AiRecommendResponse response = new AiRecommendResponse("Here is a list", Collections.emptyList());
-        when(aiChatService.recommend(any(), any())).thenReturn(response);
+    void getUserSummary_ShouldReturnSummary_WhenAdminAuthenticated() throws Exception {
+        when(aiUsageService.getUserSummary()).thenReturn(Collections.emptyList());
 
-        mockMvc.perform(post("/api/v1/ai/recommend")
-                        .with(user(securityUser(1L, UserRole.CUSTOMER)))
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
+        mockMvc.perform(get("/api/v1/admin/ai/usage/summary/users")
+                        .with(user(securityUser(1L, UserRole.ADMIN)))
+                        .contentType(MediaType.APPLICATION_JSON))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.code").value(200))
-                .andExpect(jsonPath("$.data.answer").value("Here is a list"));
+                .andExpect(jsonPath("$.code").value(200));
+    }
+
+    @Test
+    void getDailySummary_ShouldReturnSummary_WhenAdminAuthenticated() throws Exception {
+        when(aiUsageService.getDailySummary()).thenReturn(Collections.emptyList());
+
+        mockMvc.perform(get("/api/v1/admin/ai/usage/summary/daily")
+                        .with(user(securityUser(1L, UserRole.ADMIN)))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.code").value(200));
+    }
+
+    @Test
+    void getLogs_ShouldReturn403Forbidden_WhenCustomerTriesToAccess() throws Exception {
+        mockMvc.perform(get("/api/v1/admin/ai/usage/logs")
+                        .with(user(securityUser(2L, UserRole.CUSTOMER)))
+                        .contentType(MediaType.APPLICATION_JSON))
+                .andExpect(status().isForbidden());
     }
 
     private SecurityUser securityUser(Long id, UserRole role) {
